--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-search-bar": "^3.5.1",
+    "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
