--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/stack": "^6.3.25",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.5",
+    "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
@@ -19,6 +24,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-search-bar": "^3.5.1",
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3"
