--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-search-bar": "^3.5.1",
     "react-native-vector-icons": "^10.0.3",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
