--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
-    "@types/react": "~18.2.14",
-    "expo": "~49.0.15",
-    "expo-constants": "~14.4.2",
-    "expo-file-system": "~15.4.5",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-sqlite": "~11.3.3",
-    "expo-status-bar": "~1.6.0",
+    "@types/react": "~18.2.45",
+    "expo": "^50.0.13",
+    "expo-constants": "~15.4.5",
+    "expo-file-system": "~16.0.8",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
+    "expo-splash-screen": "~0.26.4",
+    "expo-sqlite": "~13.3.0",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-search-bar": "^3.5.1",
     "react-native-vector-icons": "^10.0.3",
     "sqlite3": "^5.1.7",
-    "typescript": "^5.1.3",
-    "expo-splash-screen": "~0.20.5"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
