--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
     "@types/react": "~18.2.45",
-    "expo": "^50.0.13",
+    "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
     "expo-file-system": "~16.0.8",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
-    "expo-sqlite": "~13.3.0",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
